--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Web App Dashboard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/normalize.css" rel="stylesheet">
- <link href="css/styles.css" rel="stylesheet">
+<link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body class="grid-container">
@@ -14,11 +14,13 @@
 	
 	<header class="header">
 		<h1 class="title"><strong>Your</strong>App</h1>
-		<img src="icons/icon-bell.svg" alt="Bell icon" class="icon-header">
-		<div><!--notif here--></div>
+		<img src="icons/icon-bell.svg" alt="Bell icon" class="icon-header" onclick="showNotification()">
+		<span class="badge"></span>
 		<div class="vl"></div>
 		<img src="images/member-1.jpg" alt="Profile Image" class="profile-image">
 		<h3 class="username">Heidi Alina</h3>
+
+
 	</header>
 	
 	<!-- ***** main navigation ***** -->
@@ -45,23 +47,18 @@
 			<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
 			<strong>Alert </strong>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
 			</div>
-	
-		<!--<div id="alert" class="widget-full">
-			<p><strong>Alert </strong>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</p>
-			<button class="close-alert">X</button>
-		</div>-->
 		
 		<!-- ***** line graph charts ***** -->
 		
 		<section class="traffic">
 			<div class="widget-full">
 				<h3>Traffic</h3>
-				<ul id="traffic-nav">
+				<!--<ul id="traffic-nav">
 					<li class="list active">Hourly</li>
 					<li class="list">Daily</li>
 					<li class="list">Weekly</li>
 					<li class="list">Monthly</li>
-				</ul>
+				</ul>-->
 			</div>
 			<div>
 				<canvas id="traffic-chart"></canvas>
@@ -100,6 +97,8 @@
 					<p class="followers">10,435</p>
 				</div>
 			</div>
+				
+			<div class="vl2"></div>
 			
 			<div class="some-container facebook">
 				<div class="some-image">
@@ -112,6 +111,8 @@
 					<p class="followers">8,739</p>
 				</div>
 			</div>
+				
+			<div class="vl2"></div>
 			
 			<div class="some-container">
 				<div class="some-image">
@@ -231,7 +232,13 @@
 			<h3>Message User</h3>
 			
 			<form class="message">
-				<input type="text" placeholder="Search for user" id="userField">
+				<input type="text" placeholder="Search for user" id="userField" list="user-list">
+				<datalist id="user-list">
+					<option value="Victoria Chambers"></option>
+					<option value="Dale Byrd"></option>
+					<option value="Dawn Wood"></option>
+					<option value="Dan Oliver"></option>
+				</datalist>
 				<textarea placeholder="Message for user" id="messageField"></textarea>
 				<button id="send">Send</button>
 			</form>
