Latest version, ready for review

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 			<div class="toggle-switch">
  				<p>Send Email Notifications</p>
 				<label class="switch">
-					<input id="email_notif" type="checkbox">
+					<input id="email_notif" type="checkbox" store="checkbox1">
 					<span class="slider round"></span>
 				</label>
 			</div>
@@ -259,7 +259,7 @@
 			<div class="toggle-switch">
 				<p>Set Profile to Public</p>
 				<label class="switch">
-					<input id="pub_profile" type="checkbox">
+					<input id="pub_profile" type="checkbox" store="checkbox2">
 					<span class="slider round"></span>
 				</label>
 			</div>
