Final update before submitting

--- a/index.html
+++ b/index.html
@@ -264,12 +264,12 @@
 				</label>
 			</div>
 			
-			<select id="timezone">
-				<option disabled selected>Select a Timezone</option>
-				<option>Eastern</option>
-				<option>Western</option>
-				<option>Helsinki</option>
-				<option>Tampere</option>
+			<select id="timezone" name="timezone">
+				<option disabled selected value="0">Select a Timezone</option>
+				<option value="1">Eastern</option>
+				<option value="2">Western</option>
+				<option value="3">Helsinki</option>
+				<option value="4">Tampere</option>
 			</select>
 			<div>
 				<button id="save">Save</button>
